force-app/main/default/objects/Data_Download_Tracker__c/Data_Download_Tracker__c.object-meta.xml
<CustomObject>
    <label>Data Download Tracker</label>
    <nameField>
        <displayFormat>DET-{0000}</displayFormat>
        <label>Data Export Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Download Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>