force-app/main/default/objects/Data_Download_Tracker__c/fields/Downloaded_By__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Downloaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Download_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>