force-app/main/default/objects/Data_Download_Tracker__c/fields/Downloaded_Project__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Downloaded Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Data Download Trackers</relationshipLabel>
    <relationshipName>Data_Download_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>